# Anna

./: .gitignore  README.md  README_zh.md  build.zig  pyproject.toml  todo.md  todo2.md
crates/anna-rust/: Cargo.toml
native/: README.md  app.zig  main.zig  root.zig
native/api/: openai.zig
native/core/: config.zig  model_family.zig  model_path.zig
native/model/: qwen3_config.zig  qwen3_engine.zig  qwen3_loader.zig
native/runtime/: http_server.zig  qwen_text_service.zig  scheduler.zig  service_metrics.zig  streaming.zig  types.zig
native/sampling/: sampler.zig
native/tensor/: tensor.zig
native/tokenizer/: qwen3_tokenizer.zig
native/weights/: safetensors.zig
native/xpu/: build_xpu_backend.ps1  opencl_backend.zig  sycl_backend.cpp  sycl_backend.zig  sycl_bridge.h
src/anna/: __init__.py
src/anna_vllm_xpu/: __init__.py  adapter.py
tests/: test_api_routes.py  test_attention_slot_plan.py  test_bench_xpu_hotspots.py  test_build_gated_delta_fused_op.py  test_device_safety.py  test_discover_arc_gdn_decode_shapes.py  test_engine_decode.py  test_engine_safety.py  test_flashqla_gdn_xpu.py  test_fused_op_xpu.py  test_fused_ops_discovery.py  test_gemma4_multimodal_support.py  test_gemma4_text_runtime.py  test_gguf_support.py  test_hotpath_guard.py  test_linear_backend.py  test_model_family.py  test_model_path.py  test_model_shapes.py  test_moe_runtime.py  test_multimodal_support.py  test_native_manifest.py  test_quantization_replace.py  test_qwen3_asr_runtime.py  test_qwen3_asr_transcribe_cli.py  test_qwen3_tts_speak_cli.py  test_qwen_model_family.py  test_runtime_hotpath_bench.py  test_sampler_candidates.py  test_scheduler.py  test_serve_api.py  test_serve_cli.py  test_service_metrics.py  test_slot_model_runner.py  test_slot_scheduler.py  test_speak_cli.py  test_token_staging.py  test_validate_arc_gdn_decode.py  test_vllm_compat.py  test_vllm_xpu_adapter.py  (+3 more)
tools/: autoround_smoke.py  bench_api_concurrency.py  bench_runtime_hotpath.py  bench_xpu_hotspots.py  build_gated_delta_fused_op.py  detect_xpu_env.py  discover_arc_gdn_decode_shapes.py  validate_arc_gdn_decode.py
(+86 files in other folders)
